# ToDo-list-manager

./: CMakeLists.txt  README.md
include/: LogType.h  Task.h  TaskManager.h  mainwindow.h
include/command/: addTaskCmd.h  cmd.h  completeTaskCmd.h  executeFileCmd.h  listTaskCmd.h  rmTaskCmd.h
include/log/: logManager.h
include/parser/: parser.h
include/task/: task.h  taskManager.h
res/: run.txt
src/: TaskManager.cpp  mainwindow.cpp
src/command/: addTaskCmd.cpp  completeTaskCmd.cpp  executeFileCmd.cpp  listTaskCmd.cpp  rmTaskCmd.cpp
src/log/: logManager.cpp
src/parser/: parser.cpp
src/task/: taskManager.cpp
